<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hungr</string>
    <!--<string name="hello_world">Hello world!</string>-->
    <string name="action_settings">Settings</string>
    <!--<string name="fooFragment">fooFragment</string>-->
    <string name="title_activity_login">Login Activity</string>
    <string name="title">Hungr</string>
    <string name="register_title">Register</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="passwordConfirm_hint">confirm password</string>
    <string name="login">LOG IN</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="name_hint">name</string>
    <string name="email_hint">email</string>
    <string name="dollar_placeholder">$$$</string>
    <string name="results">Results</string>
    <string name="skip">Skip</string>



    <!--Nav Drawer-->
    <string-array name="nav_drawer_list">
        <item>Home</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>

    <!--About page-->
    <string name="title_activity_about">About</string>
    <string name="steven">Steven Raden</string>
    <string name="eric">Eric Chee</string>
    <string name="mike">Mike Slagle</string>
    <string name="about_paragraph">Hello. We are team Hungr. We care about your Hunger and the fact that you need to eat.</string>


</resources>
