<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.washington.echee.swipeviews.LoginFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    >


    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:gravity="center"
        android:textSize="60dp"
        android:textColor="@color/orange_main"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title"
        android:background="#66000000"
        android:textColorHint="#BEBEBE"
        android:hint="@string/username_hint"
        android:padding="5dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/username"
        android:background="#66000000"
        android:textColorHint="#BEBEBE"
        android:hint="@string/password_hint"
        android:padding="5dp"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/password"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:background="@color/orange_main"
        />

</RelativeLayout>
