<android.support.v4.widget.DrawerLayout
    android:id="@+id/dlDrawerLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="edu.washington.echee.swipeviews.AboutActivity"
        android:orientation="vertical"
        android:background="@drawable/blur_background">

        <TextView android:text="@string/about_paragraph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/steven"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/eric"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/mike"/>
        </LinearLayout>

        <ImageView android:id="@+id/about_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="start">

        <RelativeLayout android:id="@+id/rlProfileBox"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@color/orange_main">

            <!--<ImageView-->
            <!--android:id="@+id/profile_background"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:adjustViewBounds="true"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:scaleType="centerCrop"/>-->

            <ImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:layout_alignParentLeft="true"
                android:src="@drawable/neward_ted" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_below="@+id/ivProfileImage"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:text="Ted Neward"/>

        </RelativeLayout>

        <ListView android:id="@+id/lvNavDrawer"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:background="#fff"/>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
